Collapse threads: Differentiate activities, fix links

--- a/app/styles/_activities.sass
+++ b/app/styles/_activities.sass
@@ -26,8 +26,8 @@
     padding-left: 35px
 
 .activity.collapsed
-  margin: 0
+  margin: 2px 0
   padding: 8px 5px
-  border-left: 4px solid $comments_left_border
+  border-left: 4px solid white
   background-color: $comments_bkg
   +gradient($comments_left_border, $comments_bkg)
